# FastAPI_P1

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/apps/auth/: connector.py  dependencies.py  middleware.py  routers.py  schemas.py  services.py  utils.py
src/apps/user/: repository.py  routers.py  schemas.py  services.py
src/routers/: api_v1_router.py
src/settings/: settings.py
src/utils/: store.py
tests/: test_app.py
